--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@ body{
     position: absolute;
     left:1%;
     top:1.3%;
+    transition-duration: 0.5s;
     cursor:pointer;
 }
 .fa-solid.fa-bars:hover{
-    background-color: rgba(85, 85, 85, 0.322);
+    background-color: rgba(88, 88, 88, 0.507);
     border-radius: 5px;
 }
 a{
@@ -27,14 +28,13 @@ a{
 .menu{
     position:absolute;
     background-color: white;
-    width: 250px;
-    height: 945px;
-    margin-top:0px;
+    padding: 459px 120px;
 }
 .text{
-    margin-left:7px;
+    top:3%;
+    right:10%;
+    text-align: center;
     position: absolute;
-    bottom:79%;
 }
 .hidden{
     display: none;
@@ -45,9 +45,10 @@ a{
     font-size:30px;
     bottom:95%;
     cursor:pointer;
+    transition-duration: 0.5s;
 }
 .fa-solid.fa-xmark:hover{
-    background-color: rgba(85, 85, 85, 0.322);
+    background-color: rgba(88, 88, 88, 0.507);
     border-radius: 5px;
 }
 .menutitle{
